Layout bug fix. And date to IST

--- a/assets/css/mis-layout.css
+++ b/assets/css/mis-layout.css
@@ -384,7 +384,7 @@ div.-mis-right-options {
 	background: #FEE;
 }
 
-.notification.error > .-mis-notification-link.error {
+.notification.error > .-mis-notification-link {
 	background: #FFF9F9;
 	color: #722;
 }
